# amachecker

./: .gitignore  README.md  amachecker.spec  export_example.csv  main.py  pyproject.toml
.github/workflows/: build-and-release-windows.yml  build-windows.yml
amachecker/: export_reader.py  gui.py  product_page_checker.py  thread.py
amachecker/gui/: __init__.py  gui.py  style.py
assets/styles/: style.qss
